// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon Component > should render with icon name 1`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.0399 7.92603L20.0399 6.92603V17M4 6.5V12.0001M4 12.0001V17.0001M4 12.0001H12M12 6.5V12.0001M12 12.0001V17.0001"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 2`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 10.4998V9.99976C15 8.3429 16.3431 6.99976 18 6.99976H18.1716C19.7337 6.99976 20.9996 8.26627 20.9996 9.82837C20.9996 10.5785 20.702 11.2979 20.1716 11.8284L15 16.9999L21.5 17M3 6.99988V11.9999M3 11.9999V16.9999M3 11.9999H11M11 6.99988V11.9999M11 11.9999V16.9999"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 3`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 7H21L17 11H18C19.6569 11 21 12.3431 21 14C21 15.6569 19.6569 17 18 17C17.3793 17 16.7738 16.8077 16.2671 16.4492C15.7604 16.0907 15.3775 15.5838 15.1709 14.9985M3 7V12M3 12V17M3 12H11M11 7V12M11 12V17"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 4`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 17H10M10 17H12M10 17L14 6M12 6H14M14 6H16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 5`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 11.5H12.5M8 11.5V6H12.5C14.433 6 16 7.23122 16 8.75C16 10.2688 14.433 11.5 12.5 11.5M8 11.5V17H13.5C15.433 17 17 15.7688 17 14.25C17 12.7312 15.433 11.5 13.5 11.5H12.5"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 6`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 18H18M8 6V11C8 13.2091 9.79086 15 12 15C14.2091 15 16 13.2091 16 11V6"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 7`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17H20M8 15L5.5 18L4 17M12 7H20M8 5L5.5 8L4 7"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 8`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 17H19M4 15.6853V15.5C4 14.6716 4.67157 14 5.5 14H5.54054C6.34658 14 7.00021 14.6534 7.00021 15.4595C7.00021 15.8103 6.8862 16.1519 6.67568 16.4326L4 20.0002L7 20M11 7H19M4 5L6 4V10"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 9`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 17C6 17.5523 5.55228 18 5 18C4.44772 18 4 17.5523 4 17C4 16.4477 4.44772 16 5 16C5.55228 16 6 16.4477 6 17Z M6 7C6 7.55228 5.55228 8 5 8C4.44772 8 4 7.55228 4 7C4 6.44772 4.44772 6 5 6C5.55228 6 6 6.44772 6 7Z M11 17H19M11 7H19M6 17C6 17.5523 5.55228 18 5 18C4.44772 18 4 17.5523 4 17C4 16.4477 4.44772 16 5 16C5.55228 16 6 16.4477 6 17ZM6 7C6 7.55228 5.55228 8 5 8C4.44772 8 4 7.55228 4 7C4 6.44772 4.44772 6 5 6C5.55228 6 6 6.44772 6 7Z"
      fill="currentColor"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 10`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12V16.2C21 17.8802 21 18.7202 20.673 19.362C20.3854 19.9265 19.9265 20.3854 19.362 20.673C18.7202 21 17.8802 21 16.2 21H7.8C6.11984 21 5.27976 21 4.63803 20.673C4.07354 20.3854 3.6146 19.9265 3.32698 19.362C3 18.7202 3 17.8802 3 16.2V12M16 7L12 3M12 3L8 7M12 3V15"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 11`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 3V21M7.8 3H16.2C17.8802 3 18.7202 3 19.362 3.32698C19.9265 3.6146 20.3854 4.07354 20.673 4.63803C21 5.27976 21 6.11984 21 7.8V16.2C21 17.8802 21 18.7202 20.673 19.362C20.3854 19.9265 19.9265 20.3854 19.362 20.673C18.7202 21 17.8802 21 16.2 21H7.8C6.11984 21 5.27976 21 4.63803 20.673C4.07354 20.3854 3.6146 19.9265 3.32698 19.362C3 18.7202 3 17.8802 3 16.2V7.8C3 6.11984 3 5.27976 3.32698 4.63803C3.6146 4.07354 4.07354 3.6146 4.63803 3.32698C5.27976 3 6.11984 3 7.8 3Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 12`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 18L18 6M6 6L18 18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 13`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 5V19M5 12H19"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 14`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 6L9 12L15 18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 15`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17 12C17 12.5523 17.4477 13 18 13C18.5523 13 19 12.5523 19 12C19 11.4477 18.5523 11 18 11C17.4477 11 17 11.4477 17 12Z"
      fill="currentColor"
    />
    <path
      d="M11 12C11 12.5523 11.4477 13 12 13C12.5523 13 13 12.5523 13 12C13 11.4477 12.5523 11 12 11C11.4477 11 11 11.4477 11 12Z"
      fill="currentColor"
    />
    <path
      d="M5 12C5 12.5523 5.44772 13 6 13C6.55228 13 7 12.5523 7 12C7 11.4477 6.55228 11 6 11C5.44772 11 5 11.4477 5 12Z"
      fill="currentColor"
    />
    <path
      d="M17 12C17 12.5523 17.4477 13 18 13C18.5523 13 19 12.5523 19 12C19 11.4477 18.5523 11 18 11C17.4477 11 17 11.4477 17 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
    <path
      d="M11 12C11 12.5523 11.4477 13 12 13C12.5523 13 13 12.5523 13 12C13 11.4477 12.5523 11 12 11C11.4477 11 11 11.4477 11 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
    <path
      d="M5 12C5 12.5523 5.44772 13 6 13C6.55228 13 7 12.5523 7 12C7 11.4477 6.55228 11 6 11C5.44772 11 5 11.4477 5 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 16`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.3086 2.53125L13.584 4.125H21.5137V18.75H19.0957L19.2158 20.127L3.77441 21.4775L2.42383 6.03711L6.01367 5.72168V2.25H12.083L12.3086 2.53125ZM4.04883 7.40039L5.1377 19.8525L17.5908 18.7627L16.6533 8.05371L9.54492 8.67578L7.89844 7.06348L4.04883 7.40039ZM7.51367 5.59082L8.4541 5.50879L10.1006 7.12207L18.0166 6.42871L18.9639 17.25H20.0137V5.625H12.8623L12.6367 5.34375L11.3613 3.75H7.51367V5.59082Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 17`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.3086 2.53125L13.584 4.125H21.5137V11.4316C21.0729 10.9562 20.5687 10.5406 20.0137 10.1992V5.625H12.8623L12.6367 5.34375L11.3613 3.75H7.51367V5.59082L8.4541 5.50879L10.1006 7.12207L18.0166 6.42871L18.2793 9.43066C17.7892 9.28797 17.2775 9.19629 16.75 9.16211L16.6533 8.05371L9.54492 8.67578L7.89844 7.06348L4.04883 7.40039L5.1377 19.8525L9.88477 19.4365C10.1383 19.9494 10.4513 20.4273 10.8154 20.8613L3.77441 21.4775L2.42383 6.03711L6.01367 5.72168V2.25H12.083L12.3086 2.53125Z"
      fill="currentColor"
    />
    <path
      d="M20.4987 16.2795C20.4987 13.9507 18.6107 12.0627 16.2819 12.0627C13.953 12.0627 12.0651 13.9507 12.0651 16.2795C12.0651 18.6084 13.953 20.4963 16.2819 20.4963V21.9963C13.1246 21.9963 10.5651 19.4368 10.5651 16.2795C10.5651 13.1222 13.1246 10.5627 16.2819 10.5627C19.4392 10.5627 21.9987 13.1222 21.9987 16.2795C21.9987 19.4368 19.4392 21.9963 16.2819 21.9963V20.4963C18.6107 20.4963 20.4987 18.6084 20.4987 16.2795Z"
      fill="currentColor"
    />
    <path
      d="M15.4336 18.4805V17.2305H14.1836C13.7694 17.2305 13.4336 16.8947 13.4336 16.4805C13.4336 16.0663 13.7694 15.7305 14.1836 15.7305H15.4336V14.4805C15.4336 14.0663 15.7694 13.7305 16.1836 13.7305C16.5978 13.7305 16.9336 14.0663 16.9336 14.4805V15.7305H18.1836C18.5978 15.7305 18.9336 16.0663 18.9336 16.4805C18.9336 16.8947 18.5978 17.2305 18.1836 17.2305H16.9336V18.4805C16.9336 18.8947 16.5978 19.2305 16.1836 19.2305C15.7694 19.2305 15.4336 18.8947 15.4336 18.4805Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 18`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.8594 5.25H21.75V11.6924C21.3165 11.177 20.8114 10.7242 20.25 10.3486V6.75H17.9902L18.2227 9.41504C17.7324 9.27727 17.2213 9.18966 16.6943 9.16016L16.2236 3.77148L3.77148 4.86133L4.86133 17.3135L9.18652 16.9346C9.2329 17.4452 9.33219 17.9403 9.48047 18.4141L7.75 18.5664V19.25H9.80371C10.0512 19.7897 10.3634 20.2929 10.7314 20.75H6.25V18.6973L3.49707 18.9385L2.14648 3.49707L17.5879 2.14648L17.8594 5.25ZM9.79883 13.3213C9.57517 13.811 9.40349 14.3296 9.29492 14.8711L6.3877 15.126L6.25684 13.6318L9.79883 13.3213ZM14.1699 9.46777C13.056 9.81388 12.0588 10.4252 11.2529 11.2285L6.08594 11.6816L5.95508 10.1865L14.1699 9.46777ZM14.7432 7.36816L5.77734 8.15234L5.64648 6.6582L14.6123 5.87402L14.7432 7.36816Z"
      fill="currentColor"
    />
    <path
      d="M20.5061 16.2811C20.5061 13.9523 18.6182 12.0643 16.2893 12.0643C13.9604 12.0643 12.0725 13.9523 12.0725 16.2811C12.0725 18.61 13.9604 20.4979 16.2893 20.4979V21.9979C13.132 21.9979 10.5725 19.4384 10.5725 16.2811C10.5725 13.1238 13.132 10.5643 16.2893 10.5643C19.4466 10.5643 22.0061 13.1238 22.0061 16.2811C22.0061 19.4384 19.4466 21.9979 16.2893 21.9979V20.4979C18.6182 20.4979 20.5061 18.61 20.5061 16.2811Z"
      fill="currentColor"
    />
    <path
      d="M15.441 18.4821V17.2321H14.191C13.7768 17.2321 13.441 16.8963 13.441 16.4821C13.441 16.0678 13.7768 15.7321 14.191 15.7321H15.441V14.4821C15.441 14.0678 15.7768 13.7321 16.191 13.7321C16.6053 13.7321 16.941 14.0678 16.941 14.4821V15.7321H18.191C18.6053 15.7321 18.941 16.0678 18.941 16.4821C18.941 16.8963 18.6053 17.2321 18.191 17.2321H16.941V18.4821C16.941 18.8963 16.6053 19.2321 16.191 19.2321C15.7768 19.2321 15.441 18.8963 15.441 18.4821Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 19`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.8594 5.25H21.75V11.6924C21.3165 11.177 20.8114 10.7242 20.25 10.3486V6.75H17.9902L18.2227 9.41504C17.7324 9.27727 17.2213 9.18966 16.6943 9.16016L16.2236 3.77148L3.77148 4.86133L4.86133 17.3135L9.18652 16.9346C9.2329 17.4452 9.33219 17.9403 9.48047 18.4141L7.75 18.5664V19.25H9.80371C10.0512 19.7897 10.3634 20.2929 10.7314 20.75H6.25V18.6973L3.49707 18.9385L2.14648 3.49707L17.5879 2.14648L17.8594 5.25ZM9.79883 13.3213C9.57517 13.811 9.40349 14.3296 9.29492 14.8711L6.3877 15.126L6.25684 13.6318L9.79883 13.3213ZM14.1699 9.46777C13.056 9.81388 12.0588 10.4252 11.2529 11.2285L6.08594 11.6816L5.95508 10.1865L14.1699 9.46777ZM14.7432 7.36816L5.77734 8.15234L5.64648 6.6582L14.6123 5.87402L14.7432 7.36816Z"
      fill="currentColor"
    />
    <path
      d="M20.5061 16.2811C20.5061 13.9523 18.6182 12.0643 16.2893 12.0643C13.9604 12.0643 12.0725 13.9523 12.0725 16.2811C12.0725 18.61 13.9604 20.4979 16.2893 20.4979V21.9979C13.132 21.9979 10.5725 19.4384 10.5725 16.2811C10.5725 13.1238 13.132 10.5643 16.2893 10.5643C19.4466 10.5643 22.0061 13.1238 22.0061 16.2811C22.0061 19.4384 19.4466 21.9979 16.2893 21.9979V20.4979C18.6182 20.4979 20.5061 18.61 20.5061 16.2811Z"
      fill="currentColor"
    />
    <path
      d="M14.2465 17.366L15.1304 16.4821L14.2465 15.5982C13.9536 15.3053 13.9536 14.8305 14.2465 14.5376C14.5394 14.2447 15.0143 14.2447 15.3072 14.5376L16.191 15.4214L17.0749 14.5376C17.3678 14.2447 17.8427 14.2447 18.1356 14.5376C18.4285 14.8305 18.4285 15.3053 18.1356 15.5982L17.2517 16.4821L18.1356 17.366C18.4285 17.6589 18.4285 18.1338 18.1356 18.4266C17.8427 18.7195 17.3678 18.7195 17.0749 18.4266L16.191 17.5428L15.3072 18.4266C15.0143 18.7195 14.5394 18.7195 14.2465 18.4266C13.9536 18.1338 13.9536 17.6589 14.2465 17.366Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 20`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C7.2 2 5.33333 6.66667 5 9H6L7 21H17L18 9H19C18.6667 6.66667 16.8 2 12 2Z"
      stroke="currentColor"
    />
    <path
      d="M12 1.25C13.0177 1.25 14.0256 1.45037 14.9658 1.83984C15.9061 2.22932 16.7608 2.79988 17.4805 3.51953C18.2001 4.23919 18.7707 5.09391 19.1602 6.03418C19.5496 6.97445 19.75 7.98226 19.75 9V9.75H18.6904L17.6904 21.75H6.30957L5.30957 9.75H4.25V9C4.25 7.98226 4.45037 6.97445 4.83984 6.03418C5.22932 5.09391 5.79988 4.23919 6.51953 3.51953C7.23919 2.79988 8.09391 2.22932 9.03418 1.83984C9.97445 1.45037 10.9823 1.25 12 1.25ZM7.68945 20.25H16.3105L17.1855 9.75H6.81445L7.68945 20.25ZM12 2.75C11.1793 2.75 10.3666 2.91155 9.6084 3.22559C8.85011 3.53968 8.16142 4.00069 7.58105 4.58105C7.00069 5.16142 6.53968 5.85011 6.22559 6.6084C6.0077 7.13448 5.86495 7.68701 5.79688 8.25H18.2031C18.1351 7.68701 17.9923 7.13448 17.7744 6.6084C17.4603 5.85011 16.9993 5.16142 16.4189 4.58105C15.8386 4.00069 15.1499 3.53968 14.3916 3.22559C13.6334 2.91155 12.8207 2.75 12 2.75ZM12 4C12.5252 4 13.0451 4.07783 13.5303 4.22852C14.0155 4.37927 14.4567 4.60036 14.8281 4.87891C15.1994 5.15738 15.4943 5.48774 15.6953 5.85156C15.8963 6.21554 16 6.60603 16 7H8C8 6.60603 8.10367 6.21554 8.30469 5.85156C8.5057 5.48774 8.80057 5.15738 9.17188 4.87891C9.54329 4.60036 9.98446 4.37927 10.4697 4.22852C10.9549 4.07783 11.4748 4 12 4Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 21`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 21L16.65 16.65M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 22`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
    <path
      d="M18.7273 14.7273C18.6063 15.0015 18.5702 15.3056 18.6236 15.6005C18.6771 15.8954 18.8177 16.1676 19.0273 16.3818L19.0818 16.4364C19.2509 16.6052 19.385 16.8057 19.4765 17.0265C19.568 17.2472 19.6151 17.4838 19.6151 17.7227C19.6151 17.9617 19.568 18.1983 19.4765 18.419C19.385 18.6397 19.2509 18.8402 19.0818 19.0091C18.913 19.1781 18.7124 19.3122 18.4917 19.4037C18.271 19.4952 18.0344 19.5423 17.7955 19.5423C17.5565 19.5423 17.3199 19.4952 17.0992 19.4037C16.8785 19.3122 16.678 19.1781 16.5091 19.0091L16.4545 18.9545C16.2403 18.745 15.9682 18.6044 15.6733 18.5509C15.3784 18.4974 15.0742 18.5335 14.8 18.6545C14.5311 18.7698 14.3018 18.9611 14.1403 19.205C13.9788 19.4489 13.8921 19.7347 13.8909 20.0273V20.1818C13.8909 20.664 13.6994 21.1265 13.3584 21.4675C13.0174 21.8084 12.5549 22 12.0727 22C11.5905 22 11.1281 21.8084 10.7871 21.4675C10.4461 21.1265 10.2545 20.664 10.2545 20.1818V20.1C10.2475 19.7991 10.1501 19.5073 9.97501 19.2625C9.79991 19.0176 9.55521 18.8312 9.27273 18.7273C8.99853 18.6063 8.69437 18.5702 8.39947 18.6236C8.10456 18.6771 7.83244 18.8177 7.61818 19.0273L7.56364 19.0818C7.39478 19.2509 7.19425 19.385 6.97353 19.4765C6.7528 19.568 6.51621 19.6151 6.27727 19.6151C6.03834 19.6151 5.80174 19.568 5.58102 19.4765C5.36029 19.385 5.15977 19.2509 4.99091 19.0818C4.82186 18.913 4.68775 18.7124 4.59626 18.4917C4.50476 18.271 4.45766 18.0344 4.45766 17.7955C4.45766 17.5565 4.50476 17.3199 4.59626 17.0992C4.68775 16.8785 4.82186 16.678 4.99091 16.5091L5.04545 16.4545C5.25503 16.2403 5.39562 15.9682 5.4491 15.6733C5.50257 15.3784 5.46647 15.0742 5.34545 14.8C5.23022 14.5311 5.03887 14.3018 4.79497 14.1403C4.55107 13.9788 4.26526 13.8921 3.97273 13.8909H3.81818C3.33597 13.8909 2.87351 13.6994 2.53253 13.3584C2.19156 13.0174 2 12.5549 2 12.0727C2 11.5905 2.19156 11.1281 2.53253 10.7871C2.87351 10.4461 3.33597 10.2545 3.81818 10.2545H3.9C4.2009 10.2475 4.49273 10.1501 4.73754 9.97501C4.98236 9.79991 5.16883 9.55521 5.27273 9.27273C5.39374 8.99853 5.42984 8.69437 5.37637 8.39947C5.3229 8.10456 5.18231 7.83244 4.97273 7.61818L4.91818 7.56364C4.74913 7.39478 4.61503 7.19425 4.52353 6.97353C4.43203 6.7528 4.38493 6.51621 4.38493 6.27727C4.38493 6.03834 4.43203 5.80174 4.52353 5.58102C4.61503 5.36029 4.74913 5.15977 4.91818 4.99091C5.08704 4.82186 5.28757 4.68775 5.50829 4.59626C5.72901 4.50476 5.96561 4.45766 6.20455 4.45766C6.44348 4.45766 6.68008 4.50476 6.9008 4.59626C7.12152 4.68775 7.32205 4.82186 7.49091 4.99091L7.54545 5.04545C7.75971 5.25503 8.03183 5.39562 8.32674 5.4491C8.62164 5.50257 8.9258 5.46647 9.2 5.34545H9.27273C9.54161 5.23022 9.77093 5.03887 9.93245 4.79497C10.094 4.55107 10.1807 4.26526 10.1818 3.97273V3.81818C10.1818 3.33597 10.3734 2.87351 10.7144 2.53253C11.0553 2.19156 11.5178 2 12 2C12.4822 2 12.9447 2.19156 13.2856 2.53253C13.6266 2.87351 13.8182 3.33597 13.8182 3.81818V3.9C13.8193 4.19253 13.906 4.47834 14.0676 4.72224C14.2291 4.96614 14.4584 5.15749 14.7273 5.27273C15.0015 5.39374 15.3056 5.42984 15.6005 5.37637C15.8954 5.3229 16.1676 5.18231 16.3818 4.97273L16.4364 4.91818C16.6052 4.74913 16.8057 4.61503 17.0265 4.52353C17.2472 4.43203 17.4838 4.38493 17.7227 4.38493C17.9617 4.38493 18.1983 4.43203 18.419 4.52353C18.6397 4.61503 18.8402 4.74913 19.0091 4.91818C19.1781 5.08704 19.3122 5.28757 19.4037 5.50829C19.4952 5.72901 19.5423 5.96561 19.5423 6.20455C19.5423 6.44348 19.4952 6.68008 19.4037 6.9008C19.3122 7.12152 19.1781 7.32205 19.0091 7.49091L18.9545 7.54545C18.745 7.75971 18.6044 8.03183 18.5509 8.32674C18.4974 8.62164 18.5335 8.9258 18.6545 9.2V9.27273C18.7698 9.54161 18.9611 9.77093 19.205 9.93245C19.4489 10.094 19.7347 10.1807 20.0273 10.1818H20.1818C20.664 10.1818 21.1265 10.3734 21.4675 10.7144C21.8084 11.0553 22 11.5178 22 12C22 12.4822 21.8084 12.9447 21.4675 13.2856C21.1265 13.6266 20.664 13.8182 20.1818 13.8182H20.1C19.8075 13.8193 19.5217 13.906 19.2778 14.0676C19.0339 14.2291 18.8425 14.4584 18.7273 14.7273Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 23`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 16V12M12 8H12.01M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 24`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H9M15 17H17C19.7614 17 22 14.7614 22 12C22 9.23858 19.7614 7 17 7H15M7 12H17"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 25`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.5 12L10.5 15L16.5 9M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 26`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11.9998 8.99999V13M11.9998 17H12.0098M10.6151 3.89171L2.39019 18.0983C1.93398 18.8863 1.70588 19.2803 1.73959 19.6037C1.769 19.8857 1.91677 20.142 2.14613 20.3088C2.40908 20.5 2.86435 20.5 3.77487 20.5H20.2246C21.1352 20.5 21.5904 20.5 21.8534 20.3088C22.0827 20.142 22.2305 19.8857 22.2599 19.6037C22.2936 19.2803 22.0655 18.8863 21.6093 18.0983L13.3844 3.89171C12.9299 3.10654 12.7026 2.71396 12.4061 2.58211C12.1474 2.4671 11.8521 2.4671 11.5935 2.58211C11.2969 2.71396 11.0696 3.10655 10.6151 3.89171Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 27`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 8V12M12 16H12.01M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;
